# lumed_ips

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
scripts/: factory_reset.py
src/: __init__.py  laser_control.py  laser_widget.py  test_logging.py
src/Ui/: laser_control.ui  laser_ui.py
src/ipscontrol/: __main__.py  laser_widget.py
src/ipscontrol/Ui/: laser_control.ui  laser_ui.py
src/lumed_ips/: __main__.py  ips_control.py  ips_widget.py
src/lumed_ips/ui/: ips_ui.py  ips_ui.ui
tests/: test_laser_connection.py
