[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "ipscontrol"
version = "0.1"
authors = [
    { name = "Victor Blanquez-Yeste", email = "victor.blanquez-yeste@polymtl.ca" },
    { name = "Guillaume Sheehy", email = "guillaume.sheehy@polymtl.ca" },
]
dependencies = ["PyVISA-py", "PyQt5", "zeroconf", "psutil", "pyserial"]
description = "A module to control Innovative Photonic Solutions (IPS) lasers."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
version = { attr = "iadpython.__version__" }
