[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lumed_ips"
version = "2.1"
authors = [
    { name = "Guillaume Sheehy", email = "guillaume.sheehy@polymtl.ca" },
    { name = "Victor Blanquez-Yeste", email = "victor.blanquez-yeste@polymtl.ca" },
]
dependencies = [
    "PyVISA-py",
    "PyQt5",
    "zeroconf",
    "psutil",
    "pyserial",
    "qtmodern",
    "pyqt5-fugueicons",
]
description = "A module to control Innovative Photonic Solutions (IPS) lasers."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
version = { attr = "iadpython.__version__" }
