[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lumed_ips"
version = "2.1"
authors = [
    { name = "Guillaume Sheehy", email = "guillaume.sheehy@polymtl.ca" },
    { name = "Victor Blanquez-Yeste", email = "victor.blanquez-yeste@polymtl.ca" },
]
dependencies = [
    "PyVISA-py",
    "PyQt5",
    "zeroconf",
    "psutil",
    "pyserial",
    "qtmodern",
    "pyqt5-fugueicons",
]
description = "A module to control Innovative Photonic Solutions (IPS) lasers."
readme = "README.md"
requires-python = ">=3.10"


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
version = { attr = "iadpython.__version__" }


[project.optional-dependencies]
test = ["pytest>=8"]
dev = ["black>=24.0", "isort>=5.13", "pytest>=8", "build>=1.2"]

[tool.setuptools]
package-dir = { "" = "src" }


[tool.pytest.ini_options]
# addopts = "-q"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
markers = [
    "hardware: tests that require the physical IPS laser to be connected",
]


[tool.black]
line-length = 79
target-version = ["py310"]


[tool.isort]
line_length = 79
profile = "black"
src_paths = ["src", "tests"]
